--- a/environment.yml
+++ b/environment.yml
@@ -3,13 +3,13 @@ channels:
   - conda-forge
 dependencies:
   - numpy
-  - pip
   - cfitsio
   - fitsio
   - pkg-config
   - matplotlib
   - cairo
   - jpeg
+  - pillow
   - astropy
   - scipy
   - seaborn
